tests/e2e/tests/pilot/testdata/networking/v1alpha3/rule-default-route-append-headers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-route
spec:
  hosts:
    - c
  http:
    - route:
      - destination:
          host: c
          subset: v1
        weight: 75
        appendRequestHeaders: #deprecated
          istio-custom-dest-req-header: user-defined-value
        removeRequestHeaders: #deprecated
        - istio-custom-dest-req-header-remove
        appendResponseHeaders: #deprecated
          istio-custom-dest-resp-header: user-defined-value
        removeResponseHeaders: #deprecated
        - istio-custom-dest-resp-header-remove
        headers:
          request:
            add: 
              dst-req-append: added-in-request
            set: 
              dst-req-replace: new-value
            remove: 
              - dst-req-remove
          response:
            add:
              dst-res-append: added-in-response
            set:
              dst-res-replace: new-value
            remove:
              - dst-res-remove
      - destination:
          host: c
          subset: v2
        weight: 25
      headers:
        request:
          add:
            req-append: added-in-request
            istio-custom-header: user-defined-value
            istio-custom-req-header: user-defined-value
          set: 
            req-replace: new-value
          remove: 
            - req-remove
            - istio-custom-req-header-remove
        response:
          add:
            res-append: added-in-response
            istio-custom-resp-header: user-defined-value
          set:
            res-replace: new-value
          remove:
            - res-remove
            - istio-custom-resp-header-remove
